@@ -12,7 +12,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: struct_cons.h,v 1.53 2010/03/16 16:40:54 bzfwinkm Exp $"
+#pragma ident "@(#) $Id: struct_cons.h,v 1.54 2010/08/31 17:44:35 bzfwinkm Exp $"
 
 /**@file   struct_cons.h
  * @brief  datastructures for constraints and constraint handlers
@@ -110,6 +110,7 @@ struct SCIP_Conshdlr
    SCIP_Longint          nenfolpcalls;       /**< number of times, the LP enforcer was called */
    SCIP_Longint          nenfopscalls;       /**< number of times, the pseudo enforcer was called */
    SCIP_Longint          npropcalls;         /**< number of times, the propagator was called */
+   SCIP_Longint          ncheckcalls;        /**< number of times, the feasibility check was called */
    SCIP_Longint          ncutoffs;           /**< number of cutoffs found so far by this constraint handler */
    SCIP_Longint          ncutsfound;         /**< number of cuts found by this constraint handler */
    SCIP_Longint          nconssfound;        /**< number of additional constraints added by this constraint handler */
@@ -163,6 +164,7 @@ struct SCIP_Conshdlr
    SCIP_CLOCK*           enfolptime;         /**< time used for LP enforcement of this constraint handler */
    SCIP_CLOCK*           enfopstime;         /**< time used for pseudo enforcement of this constraint handler */
    SCIP_CLOCK*           proptime;           /**< time used for propagation of this constraint handler */
+   SCIP_CLOCK*           checktime;          /**< time used for feasibility check of this constraint handler */
    int                   sepapriority;       /**< priority of the constraint handler for separation */
    int                   enfopriority;       /**< priority of the constraint handler for constraint enforcing */
    int                   checkpriority;      /**< priority of the constraint handler for checking infeasibility */
